...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUserName"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextUserNameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hintUserName">
        </EditText>
...
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLogin"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonLogin" />

    </LinearLayout>
...
