<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    tools:context="cmput301w16t15.shareo.BidsFragment">

    <org.honorato.multistatetogglebutton.MultiStateToggleButton
        android:id="@+id/mstb_multi_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        mstb:values="@array/bids_choices"
        mstb:mstbPrimaryColor="@color/purple"
        android:layout_gravity="center_horizontal"
        mstb:mstbSecondaryColor="@color/white"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/empty_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="No Things"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
