...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSearchGame"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SearchView
        android:id="@+id/searchbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:title="@string/hintSearch"
        android:queryHint="@string/hintSearch"
        android:icon="@drawable/ic_search">
...
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Results"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

