...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMakeOffer"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextMakeOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/hintBidAmount">
            </EditText>
...
