<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Location"
        android:id="@+id/locationName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationshow"
        android:layout_gravity="center_horizontal"
        android:hint="Name of the meeting place" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Location"
            android:layout_weight="1"
            android:id="@+id/ShowMaps" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Location"
            android:id="@+id/SetMap"
            android:layout_weight="1"
            android:layout_gravity="right" />

    </TableRow>



</LinearLayout>
