<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonsBottom">
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/textViewAddGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textViewAddGame"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewGameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewGameName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hintGameName">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewDescription"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hintDescription">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewRate"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/hintRate">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNumberPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewNumberPlayers"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextNumberPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hintNumberPlayers">
            </EditText>
        </LinearLayout>



        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewCategory"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hintCategory">
            </EditText>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsBottom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/graybutton"
            style="@style/button_text"
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/greenbutton"
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_text"
            android:text="@string/buttonSave" />

    </LinearLayout>


</RelativeLayout>









